docs/getting-started/istio-blue-green/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo-blue-green
  labels:
    app: rollouts-demo-blue-green
spec:
  replicas: 10
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: rollouts-demo-active
      previewService: rollouts-demo-preview
    # canary:
    #   canaryService: rollouts-demo-canary
    #   stableService: rollouts-demo-stable
    #   trafficRouting:
    #     istio:
    #       virtualService:
    #         name: rollouts-demo-vsvc
    #         routes:
    #         - primary # At least one route is required
    #   steps:
    #   - setWeight: 5
    #   - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo-blue-green
  template:
    metadata:
      labels:
        app: rollouts-demo-blue-green
        istio-injection: enabled
        version: blue
    spec:
      containers:
      - name: rollouts-demo-blue-green
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
