docs/getting-started/istio-blue-green/services-blue-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-preview
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http-service
  selector:
    app: rollouts-demo-blue-green
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-active
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http-service
  selector:
    app: rollouts-demo-blue-green
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
