docs/getting-started/istio-blue-green/virtualsvc-blue-green.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc-blue-green
spec:
  gateways:
  - rollouts-demo-gateway-blue-green
  hosts:
  - rollouts-demo-blue-green.local
  http:
  - name: preview
    match:
    - headers:
        cookie:
          regex: ^(.*?;)?(preview=true)(;.*)?$
    route:
    - destination:
        host: rollouts-demo-preview
      weight: 100
  - name: active
    route:
    - destination:
        host: rollouts-demo-active
      weight: 100
